integrates\fix(front): #3970 fix git root table
- Change style to fix the DataTableNext component
when the content of the column is too large.


Former-commit-id: 0a87491a77710ecd5aae03450cf5e4ea4eaf46f0

--- a/integrates/front/src/components/DataTableNext/index.css
+++ b/integrates/front/src/components/DataTableNext/index.css
@@ -14,7 +14,7 @@
 .tableBody > td {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  white-space: pre-wrap;
 }
 
 :local .tableHeader {
